# poe_tasks

./: .gitattributes  pyproject.toml
.github/: copilot-instructions.md
src/poe_tasks/: __init__.py
src/poe_tasks/scripts/: docker-pin-latest.sh  fix-git-bash-workspace.ps1  release.sh  rescind-release.sh
typings/poethepoet_tasks/: __init__.pyi
